--- a/informal.top/雅思备考 2024Q3.html
+++ b/informal.top/雅思备考 2024Q3.html
@@ -202,4 +202,47 @@
 <p><strong>阅读</strong>：前两篇基本都看懂了同意替换，第三篇有三个空是懵的，剩下的平均水平。感觉7.0的可能性偏大</p>
 <p><strong>写作</strong>：先写了小作文，用了27分钟，策略失误了。大作文production, consumption 实在想不到同意替换，写完re了半篇结束了，正常发挥，感觉6.0</p>
 <p>结论：出结果之后，看是完全重考，还是单科重考口语。</p>
-<p>复习：口语的问题听不懂实在是难受，都不知道怎么复习了。。。</p>
+<p>8.2</p>
+<p>收集到的建议：</p>
+<ol>
+<li>多听问题</li>
+<li>多看问题和答案，有利于理解问题</li>
+<li>how问题可以从多个角度回答，多看答案，补充idea</li>
+<li>多练习</li>
+</ol>
+<ul>
+<li>口语：收集part3问题，生成音频，听了500个问题</li>
+<li>其他：给对象做了个分号的工具</li>
+</ul>
+<p>8.3</p>
+<ul>
+<li>口语：练习了3个p3话题回答；又收集了500个当季的p3问题，问题比昨天更难一些，听了一遍+复习不熟悉的问题</li>
+</ul>
+<p>8.4</p>
+<p>出分，想比上次，听力下降了0.5，懵逼。。。买了多邻国的教程，想考多邻国了</p>
+<p>8.5</p>
+<p>多邻国太难了，还是雅思吧，不要慌，先复习，大不了延期，不能有太大心里压力</p>
+<p>复习方法：</p>
+<ul>
+<li>口语：复习听力，保证能听懂；练习口语</li>
+<li>听力：精读+背数字+背单词+练习+总结</li>
+<li>阅读：尽量每天练习一篇</li>
+<li>写作：不练习，稳住就行</li>
+</ul>
+<p>练习</p>
+<ul>
+<li>口语：练习3个p2</li>
+<li>听力：复习3套+总结；听力单词生成句子和听力，多听几遍</li>
+</ul>
+<p>8.6</p>
+<ul>
+<li>口语：练习5个p3话题</li>
+<li>听力：读一遍数字；背一遍单词，减少60个单词；练习3套+2遍精听</li>
+<li>阅读：三篇文章时间分配应该是 12/18/25，练习p3，25min对12道</li>
+</ul>
+<p>8.7</p>
+<ul>
+<li>口语：练习5个p3话题，2个小时</li>
+<li>听力：练习3套+1遍精听，感觉有提升；读一遍数字；背单词，减少15个</li>
+<li>阅读：练习两篇，带上之前做的，耗时 15/21/25，7.0，勉强达标</li>
+</ul>
