--- a/iphyer.github.io/USA印象21: Santa Fe 游记.html
+++ b/iphyer.github.io/USA印象21: Santa Fe 游记.html
@@ -9,7 +9,7 @@ comments: true</p>
 &lt;!--more--&gt;
 
 <h2>Santa Fe 简介</h2>
-<p>直接用 ChatGPT 生成一段夏威夷-欧胡岛的简介， 我个人看了下还是不错的。</p>
+<p>直接用 ChatGPT 生成一段 Santa Fe 的简介， 我个人看了下还是不错的。</p>
 <p>圣达菲（Santa Fe）是美国新墨西哥州的首府，也是该州第四大城市。它成立于1610年，是美国最古老的首府城市之一。圣达菲位于洛矶山脉的南部，海拔约2134米，享有四季分明的气候，冬季积雪，夏季温暖干燥。</p>
 <p>圣达菲以其丰富的历史和文化而闻名，特别是其独特的西班牙殖民建筑风格。市中心的广场（Plaza）是一个受欢迎的旅游景点，周围有许多历史建筑、博物馆和艺术画廊。圣达菲的艺术文化非常繁荣，拥有许多著名的艺术画廊和博物馆。</p>
 <p>此外，圣达菲还以其多样化的美食而著称，融合了西班牙、墨西哥和美洲土著的烹饪传统。市内有许多著名的餐厅和咖啡馆，为游客提供独特的美食体验。</p>
