--- a/iphyer.github.io/搬家记录5: Year 2024.html
+++ b/iphyer.github.io/搬家记录5: Year 2024.html
@@ -69,11 +69,14 @@ comments: true</p>
 </li>
 <li>Costco</li>
 <li>Set up new utility and autopay</li>
-<li>USPS Forward Request </li>
-<li>Closing utility Service <ul>
+<li><p>USPS Forward Request</p>
+</li>
+<li><p>Closing utility Service</p>
+<ul>
 <li>electricity</li>
 <li>water</li>
 <li>internet</li>
+<li>rental insurance</li>
 <li>others</li>
 </ul>
 </li>
