--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -18,7 +18,7 @@ top: true</p>
 <p>High Performance Browser Networking: <a href="https://hpbn.co">https://hpbn.co</a></p>
 <p>Modern JavaScript-based web development: <a href="https://fullstackopen.com">https://fullstackopen.com</a></p>
 <p>Bash Commands and Tips: <a href="https://dev.to/awwsmm/101-bash-commands-and-tips-for-beginners-to-experts-30je">https://dev.to/awwsmm/101-bash-commands-and-tips-for-beginners-to-experts-30je</a></p>
-<p>Learn Node.js: <a href="https://nodejs.dev/en/learn">https://nodejs.dev/en/learn</a></p>
+<p>Learn Node.js: <a href="https://nodejs.org/en/learn">https://nodejs.org/en/learn</a></p>
 <p>Learn Node.js by building a backend framework: <a href="https://github.com/ishtms/learn-nodejs-hard-way">https://github.com/ishtms/learn-nodejs-hard-way</a></p>
 <p>Docker Guide: <a href="https://www.robertcooper.me/docker-guide">https://www.robertcooper.me/docker-guide</a></p>
 <p>Tail Call Optimization: <a href="https://www.youtube.com/watch?v=-PX0BV9hGZY">https://www.youtube.com/watch?v=-PX0BV9hGZY</a></p>
