--- a/kexizeroing.github.io/Intro to TypeScript.html
+++ b/kexizeroing.github.io/Intro to TypeScript.html
@@ -6,7 +6,7 @@ slug: intro-to-typescript
 description: ""
 added: "Jun 12 2022"
 tags: [js]</p>
-<h2>updatedDate: "Aug 3 2024"</h2>
+<h2>updatedDate: "Aug 8 2024"</h2>
 <blockquote><p>There is a broad spectrum of what TypeScript can give you. On the one side of this spectrum, we have: writing good old JavaScript, without types or filling the gaps with any, and after the implementation is done — fixing the types. On the other side of the spectrum, we have type-driven development. Read from <a href="https://www.aleksandra.codes/fighting-with-ts">https://www.aleksandra.codes/fighting-with-ts</a></p>
 <p>TypeScript allows you to write complex yet elegant code. Some TypeScript users love to explore the possibilities of the type system and love to encode logic at type level. This practice is known as type gymnastics. The community also helps users to learn type gymnastics by creating fun and challenges such as <a href="https://github.com/type-challenges/type-challenges">type challenges</a>.</p>
 <p>Total TypeScript book: <a href="https://github.com/total-typescript/total-typescript-book/tree/main/book-content/chapters">https://github.com/total-typescript/total-typescript-book/tree/main/book-content/chapters</a></p>
@@ -310,6 +310,30 @@ type URLObject = {
 }
 function loadFile&lt;Formats extends URLObject&gt;(fileFormats: Formats, format: keyof Formats)
 </code></pre>
+<h3>Declaring global variables</h3>
+<p>If you try to access <code>window.__INITIAL_DATA__</code> in a TypeScript file, the compiler will produce a type error because it can't find a definition of the <code>__INITIAL_DATA__</code> property anywhere.</p>
+<pre><code class="lang-ts">// Example comes from https://mariusschulz.com/blog/declaring-global-variables-in-typescript
+type InitialData = {
+  userID: string;
+};
+
+// 1. Declare a global variable using the `declare var` syntax
+// declare a global variable in the global scope 
+declare global {
+  var __INITIAL_DATA__: InitialData;
+}
+
+// or create a `globals.d.ts` file
+declare var __INITIAL_DATA__: InitialData;
+
+
+// 2. Augment the window interface
+declare global {
+  interface Window {
+    __INITIAL_DATA__: InitialData;
+  }
+}
+</code></pre>
 <h3>How to use @ts-expect-error</h3>
 <p><code>@ts-expect-error</code> lets you specify that an error will occur on the next line of the file, which is helpful letting us be sure that an error will occur. If <code>@ts-expect-error</code> doesn't find an error, it will source an error itself <em>(Unused '@ts-expect-error' directive)</em>.</p>
 <p>When you actually want to ignore an error, you'll be tempted to use <code>@ts-ignore</code>. It works similarly to <code>@ts-expect-error</code>, except for one thing: it won't error if it doesn't find an error.</p>
@@ -420,7 +444,6 @@ npx tsc --init
 </code></pre>
 <blockquote><p>Make sure you’re using Node &gt;=20.6 — it’s required for some of the flags used in this setup. The <code>--watch</code> flag was added in Node v18.11.0. The <code>--env-file</code> flag was added in Node v20.6.0.</p>
 </blockquote>
-<p>How to run ts files from command line? There is <a href="https://github.com/TypeStrong/ts-node">ts-node</a> that will compile the code and REPL for node.js: <code>npx ts-node src/foo.ts</code>. <code>tsc</code> writes js to disk. <code>ts-node</code> doesn't need to do that and runs ts on the fly.</p>
-<p><code>ts-node/register</code> is used for registering the TypeScript compiler (<code>ts-node</code>) to handle the compilation of TypeScript files on the fly. When you run a Node.js application written in TypeScript, the TypeScript code needs to be transpiled into JavaScript before it can be executed by the Node.js runtime. The <code>ts-node/register</code> module helps simplify this process by allowing you to execute TypeScript files directly without explicitly precompiling them.</p>
+<p>How to run ts files from command line? There is <a href="https://github.com/TypeStrong/ts-node">ts-node</a> that will compile the code and REPL for node.js: <code>npx ts-node src/foo.ts</code>. <code>tsc</code> writes js to disk. <code>ts-node</code> doesn't need to do that and runs ts on the fly. But it's not typechecking your code. So we recommend to type check your code first with <code>tsc</code> and then run it with <code>ts-node</code> before shipping it.</p>
 <blockquote><p>Run JS/TS file on Node.js using Vite's resolvers and transformers: <code>npx vite-node index.ts</code>. <a href="https://www.npmjs.com/package/vite-node">vite-node</a> is the engine that powers Vitest and Nuxt 3 Dev SSR. It supports ESM &amp; TypeScript out of the box.</p>
 </blockquote>
