--- a/yuanj.top/Linux 下安装 BUSCO.html
+++ b/yuanj.top/Linux 下安装 BUSCO.html
@@ -9,7 +9,7 @@ slug: t2v5e6j0
 date: 2023-07-21 17:22:17</li>
 </ul>
 <hr/>
-<p>官网说 BUSCO 直接可以用 conda 安装，但。.. 我从来没有成功过，经过多次的实践，总结了能够成功安装 BUSCO 的方法。..</p>
+<p>官网说 BUSCO 直接可以用 conda 安装，但 ... 我从来没有成功过，经过多次的实践，总结了能够成功安装 BUSCO 的方法 ...</p>
 &lt;!--more--&gt;
 
 <blockquote><p>Benchmarking Universal Single-Copy Orthologs (BUSCO) 是用于评估基因组组装和注释的完整性的工具
