--- a/yuanj.top/Windows10 & 11 安装 WSL2.html
+++ b/yuanj.top/Windows10 & 11 安装 WSL2.html
@@ -8,7 +8,7 @@ slug: y6w6f1s5
 date: 2023-05-20 14:05:25</li>
 </ul>
 <hr/>
-<p>WSL2 现在已经是我离不开的工具了，实在是太好用了。.. 但安装方法与官网的略微不同，本文记录本人亲身实践的最好的安装方法。</p>
+<p>WSL2 现在已经是我离不开的工具了，实在是太好用了 ... 但安装方法与官网的略微不同，本文记录本人亲身实践的最好的安装方法。</p>
 &lt;!--more--&gt;
 
 <h2>什么是 WSL？</h2>
