--- a/yuanj.top/一些 Python 基础知识.html
+++ b/yuanj.top/一些 Python 基础知识.html
@@ -303,7 +303,7 @@ except ZeroDivisionError as e:
 except ValueError as e:
     print("输入的数字是无效数字，异常：{}".format(e))
 finally:
-    print("资源释放。..")
+    print("资源释放 ...")
 </code></pre>
 <pre><code class="lang-python"># try-except 语句嵌套
 i = input('请输入数字')
@@ -318,7 +318,7 @@ try:
 except ValueError as e2:
     print("输入的数字是无效数字，异常：{}".format(e2))
 finally:
-    print("资源释放。..")
+    print("资源释放 ...")
 </code></pre>
 <pre><code class="lang-python"># 手动触发异常
 class ChufaException(Exception):
@@ -337,7 +337,7 @@ except ZeroDivisionError as e:
 except ValueError as e:
     raise ChufaException('输入的是无效数字')
 finally:
-    print("资源释放。..")
+    print("资源释放 ...")
 </code></pre>
 <h2>数学计算模块</h2>
 <pre><code class="lang-python"># 数学计算模块
