--- a/yuanj.top/今天“调教”了一下我的手机.html
+++ b/yuanj.top/今天“调教”了一下我的手机.html
@@ -8,7 +8,7 @@ slug: 511c5255
 date: 2023-05-03 23:01:39</li>
 </ul>
 <hr/>
-<p>吐槽一下国产厂商。..... 及本人一些应对的小措施。</p>
+<p>吐槽一下国产厂商 ...... 及本人一些应对的小措施。</p>
 &lt;!--more--&gt;
 
 <h2>问题</h2>
@@ -21,16 +21,16 @@ date: 2023-05-03 23:01:39</li>
 <li>隐私问题，例如抖音后台一直监听手机听筒</li>
 </ul>
 <h2>吐槽</h2>
-<p>吃相已经难看到无力吐槽。.....</p>
+<p>吃相已经难看到无力吐槽 ......</p>
 <p>国内的大多数用户实际上对安卓系统是有一定能更多的误解的，原生的安卓系统是非常好用的，流畅、没有广告且干净清爽，但是国内的厂商对其进行二次开发后得到的 MIUI、ColorOS 等等是被国内的厂商根据自家手机的硬件条件进行了优化并且塞入了各种各样的服务和软件，美其名曰提供更好的服务。</p>
-<p>原生的安卓系统确实是不太符合国人使用习惯，如 GooglePlay 服务无法使用等问题，但是我认为可能也没有必要加入那么多功能。国内用户手机用一段时间后卡顿其实很大程度上是由于软件臃肿，系统带不动所造成的。举个例子，我第一次玩王者荣耀这个游戏的时候它才 200mb，但是过了不到三年，8GB 的手机不下载任何其他软件才能勉强玩，到如今已经突破了 20GB，这是国内软件的通病，支付宝中的理财功能、生活圈、余额宝还有各种银行等功能我也是从来不用，但是。..... 又有什么办法呢？</p>
-<p>如果国内的互联网企业能够”专心“一点，不往软件中塞入没用的功能，那么软件的运行内存占用和存储空间占用都会大大降低，手机换代的速度也会降低不少。而安卓原生系统上的软件都是需要在 Play 商店下载的，Play 商店上的应用都是经过审核的，所以存在的问题也没有那么离谱，系统的负担也没有那么重，但安卓原生系统运行国内的软件时，很容易发生内存泄漏、权限监管不到位的问题，因为人家本身并不需要管这些事，应用上架 Play 商店时这些问题都会进行一定的审核。国内手机上的应用市场虽说也会进行”审核“，不过效果貌似很一般，之前我父亲的手机上的拼多多居然卸载不掉，原因是拼多多弄了一个”假“图标，实际上的拼多多还在手机里。..... 而广告关不掉、诱导用户点击广告等问题一直存在。</p>
-<p>所以每次换手机或者手机系统刷机之后我首先要做的事就是卸载那些没用的软件，我现在的手机是荣耀 X20，今天刷机之后我就将自带的所有能卸载的软件一律卸载了，能用其它软件替代的一律换掉，系统内置的一些华为视频、华为音乐这些毒瘤系统原生无法卸载，我使用 adb 命令行将其全部卸载掉，说是卸载。..... 实际上还在系统内，恢复出厂设置之后又会回来，没法真正卸载。而相册、文件管理、应用市场这些和系统深度绑定，卸载了之后指不定什么功能又用不了了。</p>
+<p>原生的安卓系统确实是不太符合国人使用习惯，如 GooglePlay 服务无法使用等问题，但是我认为可能也没有必要加入那么多功能。国内用户手机用一段时间后卡顿其实很大程度上是由于软件臃肿，系统带不动所造成的。举个例子，我第一次玩王者荣耀这个游戏的时候它才 200mb，但是过了不到三年，8GB 的手机不下载任何其他软件才能勉强玩，到如今已经突破了 20GB，这是国内软件的通病，支付宝中的理财功能、生活圈、余额宝还有各种银行等功能我也是从来不用，但是 ...... 又有什么办法呢？</p>
+<p>如果国内的互联网企业能够”专心“一点，不往软件中塞入没用的功能，那么软件的运行内存占用和存储空间占用都会大大降低，手机换代的速度也会降低不少。而安卓原生系统上的软件都是需要在 Play 商店下载的，Play 商店上的应用都是经过审核的，所以存在的问题也没有那么离谱，系统的负担也没有那么重，但安卓原生系统运行国内的软件时，很容易发生内存泄漏、权限监管不到位的问题，因为人家本身并不需要管这些事，应用上架 Play 商店时这些问题都会进行一定的审核。国内手机上的应用市场虽说也会进行”审核“，不过效果貌似很一般，之前我父亲的手机上的拼多多居然卸载不掉，原因是拼多多弄了一个”假“图标，实际上的拼多多还在手机里 ...... 而广告关不掉、诱导用户点击广告等问题一直存在。</p>
+<p>所以每次换手机或者手机系统刷机之后我首先要做的事就是卸载那些没用的软件，我现在的手机是荣耀 X20，今天刷机之后我就将自带的所有能卸载的软件一律卸载了，能用其它软件替代的一律换掉，系统内置的一些华为视频、华为音乐这些毒瘤系统原生无法卸载，我使用 adb 命令行将其全部卸载掉，说是卸载 ...... 实际上还在系统内，恢复出厂设置之后又会回来，没法真正卸载。而相册、文件管理、应用市场这些和系统深度绑定，卸载了之后指不定什么功能又用不了了。</p>
 <h2>替代方案</h2>
 <p>具体的方案如下：</p>
 <ul>
-<li>华为音乐、华为视频，自带广告都快把屏幕占满了。..... 用 KMPlayer 替代</li>
-<li>华为浏览器，也是到处的广告。..... 用 kiwiBrowser 替代</li>
+<li>华为音乐、华为视频，自带广告都快把屏幕占满了 ...... 用 KMPlayer 替代</li>
+<li>华为浏览器，也是到处的广告 ...... 用 kiwiBrowser 替代</li>
 <li>智慧搜索、智能助手等所谓的”智慧“服务，一律卸载，没什么用</li>
 <li>华为钱包、华为阅读、游戏中心等，没有任何用处，一律卸载</li>
 <li>华为主题，直接删掉，默认主题就不错</li>
