--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8852 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8853 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
 
-<li><a href=kexizeroing.github.io/Run%20MySQL%20locally%20and%20query%20it%20with%20Express.html>2024-08-07 Run MySQL locally and query it with Express</a></li>
+<li><a href=yuanj.top/%E5%85%AC%E4%BC%97%E5%8F%B7%E4%B8%A4%E5%91%A8%E5%B9%B4%20%7C%20%E5%86%85%E5%AE%B9%E8%BE%93%E5%87%BA%E7%9A%84%E5%8F%98%E5%8C%96%E5%8E%86%E7%A8%8B%E4%B9%9F%E6%98%AF%E6%88%90%E9%95%BF%E4%B9%8B%E8%B7%AF.html>2024-08-08 公众号两周年 | 内容输出的变化历程也是成长之路</a></li>
+
+<li><a href=kexizeroing.github.io/Run%20MySQL%20locally%20and%20manipulate%20Node.js%20files.html>2024-08-08 Run MySQL locally and manipulate Node.js files</a></li>
 
 <li><a href=blog.forecho.com/RichCalls%20Warden%20%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97.html>2024-08-06 RichCalls Warden 使用指南</a></li>
 
@@ -181,7 +183,7 @@
 
 <li><a href=yuanj.top/Seurat%204%20%E4%B8%8E%205%20%E5%85%B1%E5%AD%98.html>2024-06-11 Seurat 4 与 5 共存</a></li>
 
-<li><a href=yuanj.top/%E8%BF%98%E6%98%AF%20WSL%20%E8%88%92%E6%9C%8D%E4%B8%80%E7%82%B9%E3%80%82...html>2024-06-11 还是 WSL 舒服一点。..</a></li>
+<li><a href=yuanj.top/%E8%BF%98%E6%98%AF%20WSL%20%E8%88%92%E6%9C%8D%E4%B8%80%E7%82%B9%20....html>2024-06-11 还是 WSL 舒服一点 ...</a></li>
 
 <li><a href=luyuhuang.github.io/%E7%90%86%E6%83%B3%E5%9B%BD.html>2024-06-08 理想国</a></li>
 
