--- a/kexizeroing.github.io/HTTP connection, caching and HTTP_2.html
+++ b/kexizeroing.github.io/HTTP connection, caching and HTTP_2.html
@@ -6,12 +6,22 @@ slug: http-connection-caching-http2
 description: ""
 added: "Nov 20 2022"
 tags: [web]</p>
-<h2>updatedDate: "July 21 2024"</h2>
+<h2>updatedDate: "Aug 9 2024"</h2>
 <h2>Connection management</h2>
 <p>HTTP mostly relies on TCP for its transport protocol, providing a connection between the client and the server. Opening each TCP connection is a resource-consuming operation. Several messages must be exchanged between the client and the server. Opening and maintaining connections largely impacts the performance of web applications.</p>
 <p>The original model of HTTP, and the default one in HTTP/1.0, is <strong>short-lived connections</strong>. Each HTTP request is completed on its own connection; this means a TCP handshake happens before each HTTP request, and these are serialized.</p>
 <p>A <strong>persistent connection</strong>, also called keep-alive connection, remains open for a period of time, and can be reused for several requests, saving the need for a new TCP handshake. To put it simply, the HTTP server doesn't close the TCP connection after each response but waits some time if some other HTTP request will come over it too. The connection will not stay open forever: idle connections are closed after some time. <em>For example, Nginx <code>keepalive_timeout</code> is the time where the server will keep an idle connection open. If you send a request and then do nothing on this connection, the server will shutdown the connection at 75s after your previous request.</em> In HTTP/1.1, persistence is the default and the connection header is no longer needed, unless the client explicitly asks the server to close the connection by including a <code>Connection: close</code> header in its request, or the server decides to includes a <code>Connection: close</code> header in its response.</p>
 <p>Connection headers are prohibited in HTTP/2 and HTTP/3.</p>
+<h3>HTTP pipelining</h3>
+<p><strong>Head of Line blocking</strong> in HTTP terms is often referring to the fact that each client has a limited number of connections to a server and doing a new request over one of those connections has to wait for the ones to complete before it can fire it off.</p>
+<p>By default, HTTP requests are issued sequentially. HTTP/1.1 introduced the concept of pipelining so you could send more requests while you were waiting. It allows multiple HTTP requests to be sent over a single TCP connection without waiting for the corresponding responses.</p>
+<ul>
+<li>Non-idempotent requests such as POST should not be pipelined.</li>
+<li>HTTP pipelining was disabled or not implemented in modern browsers.</li>
+<li>This technique has been superseded by multiplexing, that is used by HTTP/2.</li>
+</ul>
+<blockquote><p>HTTP/2 does however still suffer from another kind of HOL, namely on the TCP level. One lost packet in the TCP stream makes all streams wait until that packet is re-transmitted and received. This HOL is being addressed with the QUIC protocol. HTTP/3 is being done over QUIC instead of TCP.</p>
+</blockquote>
 <h3>Domain sharding</h3>
 <p>In HTTP/1.x, the browser naively queue all HTTP requests on the client, sending one after another over a single, persistent connection. However, this is too slow. Hence, the browser vendors are left with no other choice than to <strong>open multiple TCP sessions in parallel</strong>. How many? In practice, most modern browsers, both desktop and mobile, open up to six connections per host. <em>(The higher the limit, the higher the client and server overhead, but at the additional benefit of higher request parallelism. Six connections per host is simply a safe middle ground.)</em></p>
 <p>Domain sharding is used to load resources from multiple domains/subdomains in an attempt to overcome a browser’s limit on the number of concurrent requests it can make, and therefore improving load performance. Browsers distinguish domains by name rather than by IP address. With modern browsers the limit connections for each domain is 6, we can boost the connections to 18 if we use 3 domains.</p>
