--- a/kexizeroing.github.io/Notes on work projects (in Chinese).html
+++ b/kexizeroing.github.io/Notes on work projects (in Chinese).html
@@ -603,6 +603,8 @@ https://registry.npmmirror.com/antd/latest/files
 <li>Unlike classic scripts, module scripts (<code>&lt;script type="module"</code>&gt;) require the use of the CORS protocol for cross-origin fetching.</li>
 </ol>
 </li>
+<li><p>防止重复提交：前端防抖，按钮点击后立即禁用。后端接口幂等性设计。</p>
+</li>
 </ul>
 <h3>桌面端 Electron 的本地构建过程</h3>
 <p>Electron是一个集成项目，允许开发者使用前端技术开发桌面端应用。其中 <strong>Chromium 基础能力</strong>可以让应用渲染 HTML 页面，执行页面的 JS 脚本，让应用可以在 Cookie 或 LocalStorage 中存取数据。Electron 还继承了 Chromium 的多进程架构，分一个主进程和多个渲染进程，主进程进行核心的调度启动，不同的 GUI 窗口独立渲染，做到进程间的隔离，进程与进程之间实现了 IPC 通信。<strong>Node.js 基础能力</strong>可以让开发者读写本地磁盘的文件，通过 socket 访问网络，创建和控制子进程等。<strong>Electron 内置模块</strong>可以支持创建操作系统的托盘图标，访问操作系统的剪切板，获取屏幕信息，发送系统通知，收集崩溃报告等。</p>
