--- a/blog.forecho.com/RichCalls Warden 使用指南.html
+++ b/blog.forecho.com/RichCalls Warden 使用指南.html
@@ -89,10 +89,17 @@ price: 0
 <p>除了给系统发消息实现一件清仓之外，我在账户管理中加入了一键清仓的功能，你可以直接在账户管理中点击一键清仓，就可以清仓所有的持仓了。</p>
 <p>当然清仓之前会有一个确认的弹窗，避免误操作。</p>
 <h3>定时交易</h3>
-<p>还在开发中，敬请期待。</p>
+<p>由于期权不能盘前和盘后交易，所以我开发了这个功能，如果你不想期权过夜，可以使用这个功能帮你在交易日结束之前卖出期权。</p>
+<h3>Webhook 日志</h3>
+<p>在系统中有一个 Webhook 日志，你可以看到系统接收到的消息，以及处理的结果。这样你就可以知道系统是否正常的接收到了消息，以及是否正常的处理了消息。</p>
 <h2>最佳实践</h2>
 <p>这套系统最主要的目的是给大家做止盈止损的，有时候我们明明知道跌破了支撑，但是却缺乏执行力，怎么办？提前设置好止损，然后就可以放心的等待系统帮你卖出了。</p>
 <p>比如下面一些场景</p>
+<h3>日内期权操作</h3>
+<p><img alt="" src="https://img.forecho.com/UX9R5L.png"/></p>
+<p>跟着信号买入动能股的期权，当股票启动的时候迅速设置好止盈止损，然后就可以放心的等待系统帮你卖出了。</p>
+<p>我这里使用了 3 分钟的 VWAP 作为技术指标，当股票下穿 VWAP 的时候就是一个卖出信号。</p>
+<p>除了 VWAP 指标只外，你还可以用道氏理论画出支撑和阻力线，然后设置止盈止损。</p>
 <h3>一键清仓</h3>
 <p>QQQ 如果跌破 MA20，那么其实就是一个非常糟糕的信号，这个时候一般还会继续跌，有时候你可能会犹豫，下不去手清仓，这个时候我们需要在 TradingView 中提前设置好警报，然后 Warden 就会帮你卖出了。</p>
 <p>如果你想一键清仓，消息的格式就是：</p>
@@ -109,8 +116,6 @@ order_type: mo
 </code></pre>
 <p>除了使用 <code>*</code> 代表清仓，还可以使用 <code>NVDA*</code> 代表清仓 NVDA 的所有正股和期权。</p>
 <p>除了使用 QQQ 跌破 MA20 作为清仓信号，你还可以使用其他的指标，比如 SPX 跌破某个值等等。</p>
-<h3>Webhook 日志</h3>
-<p>在系统中有一个 Webhook 日志，你可以看到系统接收到的消息，以及处理的结果。这样你就可以知道系统是否正常的接收到了消息，以及是否正常的处理了消息。</p>
 <h2>最后</h2>
 <p>这套系统我目前只花了 2 个周末时间开发，还在不断的完善中。</p>
 <p>如果你有什么好的建议或者想法，欢迎加我微信 <code>ipzone</code> 加项目群交流，申请加好友请备注 <code>Warden</code>。</p>
