--- a/kexizeroing.github.io/A basic Dockerfile and Intro to Kubernetes.html
+++ b/kexizeroing.github.io/A basic Dockerfile and Intro to Kubernetes.html
@@ -15,6 +15,7 @@ tags: [devops]</p>
 <li>Docker Client is the command line tool that allows the user to interact with the daemon.</li>
 <li>Docker desktop is using a Linux virtual machine behind the scenes for running regular docker daemon. Docker Desktop can be used either on it’s own or as a complementary tool to the CLI.</li>
 </ul>
+<p>The build context is the set of files and directories that are accessible to the Docker engine when building an image. When you run a <code>docker build</code> command, Docker sends the content of the specified context directory (and its subdirectories) to the Docker daemon. This context forms the scope within which the <code>COPY</code> and <code>ADD</code> instructions operate.</p>
 <p>Docker-compose is a tool that accepts a YAML file that specifies a cross container application and automates the creation and removal of all those containers without the need to write several docker commands for each one.</p>
 <h2>A Dockerfile for a NodeJS application</h2>
 <p>This is a valid Dockerfile for a NodeJS application. But we can improve it a lot.</p>
@@ -44,6 +45,7 @@ WORKDIR /usr/src/app
 <li>COPY our <code>package.json</code> and <code>package-lock.json</code> files separate from the source code. Docker images are cached at each layer. When building an image, Docker steps through the instructions in the Dockerfile, executing each in the order specified. As each instruction is examined, Docker looks for an existing image in its cache that it can reuse, rather than creating a new, duplicate image. This way, <code>RUN npm install</code> is only re-executed if the <code>package.json</code> or <code>package-lock.json</code> files have changed.</li>
 </ol>
 <blockquote><p>For the <code>ADD</code> and <code>COPY</code> instructions, the contents of each file in the image are examined and a checksum is calculated for each file. Aside from the <code>ADD</code> and <code>COPY</code> commands, just the command string itself is used to find a match. Once the cache is invalidated, all subsequent Dockerfile commands generate new images and the cache isn’t used.</p>
+<p>In addition to copying local files and directories from the build context (which <code>COPY</code> supports), <code>ADD</code> handles URL references and extract archives. For most use cases, <code>COPY</code> is the better choice due to its simplicity and security.</p>
 </blockquote>
 <pre><code class="lang-dockerfile">FROM node:19.7.0-bullseye-slim
 
