--- a/kexizeroing.github.io/Algorithm basics and sample problems.html
+++ b/kexizeroing.github.io/Algorithm basics and sample problems.html
@@ -7,7 +7,7 @@ description: ""
 added: ""
 top: true
 order: 4</p>
-<h2>updatedDate: "Aug 6 2024"</h2>
+<h2>updatedDate: "Aug 10 2024"</h2>
 <h3>TOC</h3>
 <ul>
 <li><a href="#toc">TOC</a></li>
@@ -18,7 +18,6 @@ order: 4</p>
 <li><a href="#quick-sort">Quick Sort</a></li>
 <li><a href="#merge-sort">Merge Sort</a></li>
 <li><a href="#linked-list">Linked List</a></li>
-<li><a href="#count-sort">Count Sort</a></li>
 <li><a href="#undoredo-stacks">Undo/Redo stacks</a></li>
 <li><a href="#shuffle-an-array">Shuffle an array</a></li>
 <li><a href="#traverse-binary-tree">Traverse Binary Tree</a></li>
@@ -64,21 +63,6 @@ order: 4</p>
         nums[j + 1] = tmp;
       }
     }
-  }
-}
-
-function bubbleSortWithFlag(nums) {
-  for (let i = nums.length - 1; i &gt; 0; i--) {
-    let flag = false;
-    for (let j = 0; j &lt; i; j++) {
-      if (nums[j] &gt; nums[j + 1]) {
-        let tmp = nums[j];
-        nums[j] = nums[j + 1];
-        nums[j + 1] = tmp;
-        flag = true;
-      }
-    }
-    if (!flag) break;
   }
 }
 </code></pre>
@@ -146,7 +130,7 @@ function partition(nums, left, right) {
 <blockquote><ol>
 <li><p>Quick sort is an in-place algorithm, but the stack due to recursive calls adds additional storage space proportional to the recursive depth.</p>
 </li>
-<li><p>It's not recommended to choose the first or last element to be the pivot, your pivot value is always the largest value, and thus every element is less than the pivot. So rather than splitting the array into two roughly equal subarrays, you split it into a single sub array that has only one fewer element than you started with. One way to choose the pivot to avoid this is to pick the pivot randomly. This makes it unlikely to hit the worst case, and so on average will work well.</p>
+<li><p>It's not recommended to choose the first or last element to be the pivot, your pivot value is always the largest value on already sorted or nearly sorted arrays. So rather than splitting the array into two roughly equal subarrays, you split it into a single sub array that has only one fewer element than you started with. One way to choose the pivot to avoid this is to pick the pivot randomly. This makes it unlikely to hit the worst case, and so on average will work well.</p>
 </li>
 </ol>
 </blockquote>
@@ -247,26 +231,6 @@ function reverseList(head) {
   }
 
   return prev;
-}
-</code></pre>
-<h3>Count Sort</h3>
-<pre><code class="lang-js">function countSort(arr, min, max) {
-  let i = min, j = 0, count = [];
-
-  for (i; i &lt;= max; i++) {
-    count[i] = 0;
-  }
-  for (i = 0; i &lt; arr.length; i++) {
-    count[arr[i]] += 1;
-  }
-  for (i = min; i &lt;= max; i++) {
-    while (count[i] &gt; 0) {
-      arr[j] = i;
-      j++;
-      count[i]--;
-    }
-  }
-  return arr;
 }
 </code></pre>
 <h3>Undo/Redo stacks</h3>
@@ -1033,16 +997,16 @@ var subarraySum = function(nums, k) {
 
   while (i &lt;= j) {
     let mid = Math.floor((i + j) / 2);
-    if (mid * mid &lt;= num) {
-      // get a possible answer and continue
-      ans = mid;
+    if (mid * mid === num) {
+      return mid;
+    } else if (mid * mid &lt; num) {
       i = mid + 1;
     } else {
       j = mid - 1;
     }
   }
 
-  return ans
+  return ans;
 }
 
 function checkPerfectSquare(num) {
@@ -1052,16 +1016,16 @@ function checkPerfectSquare(num) {
   while (i &lt;= j) {
     let mid = Math.floor((i + j) / 2);
     if (mid * mid === num) {
-      return true
+      return true;
     }
     if (mid * mid &lt; num) {
-      i = mid + 1 
+      i = mid + 1;
     } else {
-      j = mid - 1
+      j = mid - 1;
     }
   }
 
-  return false
+  return false;
 }
 </code></pre>
 <p>Given a collection of intervals, merge all overlapping intervals. i.e. Input: <code>[[1,3],[2,6],[8,10],[15,18]]</code>; Output: <code>[[1,6],[8,10],[15,18]]</code>.</p>
@@ -1081,28 +1045,26 @@ function checkPerfectSquare(num) {
 </code></pre>
 <p>Given n non-negative integers representing an elevation map where the width of each bar is 1, compute how much water it can trap after raining.</p>
 <pre><code class="lang-js">var trap = function(height) {
-  // two pointers
-  let i = 0;
-  let j = height.length - 1;
-  // maximum height encountered from the left and right
-  // ("walls" that can potentially trap water)
-  let left = height[0];
-  let right = height[j];
-  let sum = 0;
+  const stack = [];
+  let res = 0;
 
-  while (i &lt; j) {
-    if (left &lt;= right) {
-      // this is the water trapped above the current bar
-      sum += left - height[i];
-      i++;
-      left = Math.max(left, height[i]);
-    } else {
-      sum += right - height[j];
-      j--;
-      right = Math.max(right, height[j]);
+  for (let i = 0; i &lt; height.length; i++) {
+    const curH = height[i];
+    while (stack.length &amp;&amp; curH &gt; height[stack[stack.length - 1]]) {
+      const preIndex = stack.pop();
+
+      if (stack.length) {
+        // i -&gt; right boundary
+        // stack[stack.length - 1] -&gt; left boundary
+        const heightVal = Math.min(height[stack[stack.length - 1]], curH) - height[preIndex];
+        const length = i - stack[stack.length - 1] - 1;
+        res += heightVal * length;
+      }
     }
+    stack.push(i);
   }
-  return sum;
+
+  return res;
 };
 </code></pre>
 <p>You are given an integer array <code>height</code> of length n. There are n vertical lines. Find two lines that together with the x-axis form a container, such that the container contains the most water.</p>
@@ -1126,27 +1088,28 @@ function checkPerfectSquare(num) {
 <p>Given an array nums of distinct integers, return all the possible permutations. You can return the answer in any order.</p>
 <pre><code class="lang-js">var permute = function(nums) {
   const result = [];
-  const path = [];
-  const used = new Array(nums.length).fill(false);
 
-  function backtrack() {
+  function backtrack(path) {
     if (path.length === nums.length) {
       result.push([...path]);
       return;
     }
+
     for (let i = 0; i &lt; nums.length; i++) {
-      if (used[i]) continue;
-      path.push(nums[i]);
-      used[i] = true;
-      backtrack();
+      const num = nums[i];
+      if (path.includes(num)) continue;
+      path.push(num);
+      backtrack(path);
       path.pop();
-      used[i] = false;
     }
   }
 
-  backtrack();
+  backtrack([]);
   return result;
 };
+
+// Time complexity: O(n!)
+// Space complexity: O(n)
 </code></pre>
 <p>Given an integer array nums of unique elements, return all possible subsets.</p>
 <pre><code class="lang-js">var subsets = function(nums) {
@@ -1169,30 +1132,17 @@ function checkPerfectSquare(num) {
 </code></pre>
 <p>Given a binary search tree (BST), find the lowest common ancestor node of two given nodes in the BST.</p>
 <pre><code class="lang-js">var lowestCommonAncestor = function(root, p, q) {
+  // If root is the LCA node, p and q should be at different side
+
   // (root.val - p.val) * (root.val - q.val) &gt; 0, means p, q at same side
   // (root.val - p.val) * (root.val - q.val) &lt; 0, means p, q at different side
-  while (root.value - p.value &gt; 0 &amp;&amp; root.value - q.value &gt; 0) {
+  while ((root.val - p.val) * (root.val - q.val) &gt; 0) {
     if (p.val &lt; root.val) {
       root = root.left;
     } else {
       root = root.right;
     }
   }
-
-  return root;
-};
-</code></pre>
-<p>Construct binary tree from pre-order and in-order traversal.</p>
-<pre><code class="lang-js">var buildTree = function(preorder, inorder) {
-  if (preorder.length === 0) {
-     return null;
-  }
-
-  const root = new TreeNode(preorder[0]);
-  const mid = inorder.indexOf(preorder[0]);
-
-  root.left = buildTree(preorder.slice(1, mid + 1), inorder.slice(0, mid));
-  root.right = buildTree(preorder.slice(mid + 1), inorder.slice(mid + 1));
 
   return root;
 };
@@ -1208,6 +1158,22 @@ function checkPerfectSquare(num) {
   }
 
   return helper(root, -Infinity, Infinity);
+};
+</code></pre>
+<p>Construct binary tree from pre-order and in-order traversal.</p>
+<pre><code class="lang-js">var buildTree = function(preorder, inorder) {
+  if (preorder.length === 0) {
+    return null;
+  }
+
+  const root = new TreeNode(preorder[0]);
+  const mid = inorder.indexOf(preorder[0]);
+
+  // the # of elements in the left subtree is the same in both traversals
+  root.left = buildTree(preorder.slice(1, mid + 1), inorder.slice(0, mid));
+  root.right = buildTree(preorder.slice(mid + 1), inorder.slice(mid + 1));
+
+  return root;
 };
 </code></pre>
 <p>Given a 2d grid map of '1's (land) and '0's (water), count the number of islands. An island is surrounded by water and is formed by connecting adjacent lands horizontally or vertically. You may assume all four edges are all surrounded by water.</p>
