--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -158,6 +158,7 @@ top: true</p>
 <p>Web component JS frameworks overview by their syntax and features: <a href="https://component-party.dev">https://component-party.dev</a></p>
 <p>Open Source Tailwind components tailored for your AI and GPT: <a href="https://github.com/LangbaseInc/langui">https://github.com/LangbaseInc/langui</a></p>
 <p>Converting any layout you have to drag-to-swap layout: <a href="https://github.com/TahaSh/swapy">https://github.com/TahaSh/swapy</a></p>
+<p>Drag and drop for any experience on any tech stack: <a href="https://github.com/atlassian/pragmatic-drag-and-drop">https://github.com/atlassian/pragmatic-drag-and-drop</a></p>
 <hr/>
 <h2>React ecosystem</h2>
 <p>The Beginner's Guide to React: <a href="https://egghead.io/courses/the-beginner-s-guide-to-react">https://egghead.io/courses/the-beginner-s-guide-to-react</a> or <a href="https://www.youtube.com/watch?v=7_x4AuqHxlg">https://www.youtube.com/watch?v=7_x4AuqHxlg</a></p>
