--- a/kexizeroing.github.io/JavaScript String, Array and Object.html
+++ b/kexizeroing.github.io/JavaScript String, Array and Object.html
@@ -146,9 +146,18 @@ function uniq(a) {
 <li>JSON.parse(JSON.stringify(arr))  // deep clone</li>
 <li>structuredClone(arr)  // deep clone, works across the latest browser versions</li>
 </ul>
-<p>Note that <code>JSON.parse(JSON.stringify(arr))</code> depends upon JSON, it also inherits its limitations. <code>undefined</code>, <code>Function</code>, and <code>Symbol</code> are not valid JSON values. If any such values are encountered during the stringify conversion, they are either omitted (when found in an object) or changed to <code>null</code> (when found in an array).</p>
+<p>Note that <code>JSON.parse(JSON.stringify(arr))</code> depends upon JSON, it also inherits its limitations. <code>undefined</code>, <code>Function</code>, and <code>Symbol</code> are not valid JSON values. If any such values are encountered during the stringify conversion, they are either omitted (when found in an object) or changed to <code>null</code> (when found in an array). Btw, Dates will be turned into strings, Sets and Maps would be converted to empty objects.</p>
 <pre><code class="lang-js">JSON.stringify(function(){}) // undefined
 JSON.stringify([undefined, function(){}, () =&gt; {}])  // "[null, null, null]"
+
+const obj = {
+  set: new Set([1,2]),
+  map: new Map([
+    ["a", 1],
+    ["b", 2],
+  ])
+}
+JSON.stringify(obj) // '{"set":{},"map":{}}'
 </code></pre>
 <h3>Array-like objects</h3>
 <p>In practice, such object is expected to actually have a <code>length</code> property and to have indexed elements in the range <code>0</code> to <code>length - 1</code>. You can actually just use Array's <code>slice</code> function to convert it into a standard JavaScript array. <strong>The <code>slice</code> function is intentionally generic;</strong> it does not require that its <code>this</code> value be an Array object, so it works on anything that has a length property. Many DOM objects are array-like — for example, <code>NodeList</code> and <code>HTMLCollection</code>. The <code>arguments</code> object is also array-like.</p>
