--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8853 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8854 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=lutaonan.com/%E3%80%8C%E4%BB%A3%E7%A0%81%E8%89%BA%E6%9C%AF%E5%AE%B6%E3%80%8D%E4%B8%8D%E4%BC%9A%E8%A2%AB%20AI%20%E5%8F%96%E4%BB%A3.html>2024-08-10 「代码艺术家」不会被 AI 取代</a></li>
 
 <li><a href=yuanj.top/%E5%85%AC%E4%BC%97%E5%8F%B7%E4%B8%A4%E5%91%A8%E5%B9%B4%20%7C%20%E5%86%85%E5%AE%B9%E8%BE%93%E5%87%BA%E7%9A%84%E5%8F%98%E5%8C%96%E5%8E%86%E7%A8%8B%E4%B9%9F%E6%98%AF%E6%88%90%E9%95%BF%E4%B9%8B%E8%B7%AF.html>2024-08-08 公众号两周年 | 内容输出的变化历程也是成长之路</a></li>
 
